--- a/client/src/App.css
+++ b/client/src/App.css
@@ -357,3 +357,73 @@ body {
   40% { opacity: 1; } 
 }
 /* ==================================== */
+
+/* ==================popupdelete================== */
+
+.popup .overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.7);
+  z-index: 1;
+}
+
+.popup .content {
+   position: relative;
+   transform:scale(0);
+   background-color: #fff;
+   animation: popup 0.20s 0.2s ease-in-out forwards;
+   width: 50%;
+   height: auto;
+   z-index: 2;
+   text-align: center;
+   display: flex;
+   flex-direction: column;
+   padding: 20px ;
+   box-sizing: border-box;
+  }
+
+  @keyframes popup {
+    from {
+      transform:scale(0);
+    }to {
+      transform:scale(1);
+    }
+  }
+  
+  .popup .close-btn {
+    align-self: end;
+    width: 30px;
+    height: 30px;
+    background: #222;
+    color: #fff;
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 50%;
+  }
+  .popup .close-btn:hover {
+    cursor: default;
+  }
+  .popup.active .overlay {
+    display: block;
+  }
+.content .option {
+  width: 100%;
+  border: unset;
+  display: flex;
+  justify-content: center;
+}
+.content .option a {
+  width: 10%;
+  cursor: pointer;
+}
+  .popup.active .content{
+    transition: all 300ms ease-in-out; 
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+/* ============ */
