--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Mulish:wght@300&family=Nanum+Gothic&family=Nunito:wght@300&family=Raleway:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Mulish:wght@300&family=Nanum+Gothic&family=Nunito:wght@300&family=PT+Sans+Narrow&family=Raleway:wght@300&display=swap');
 /* Lato */
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
+
 .App {
   text-align: center;
  
@@ -46,7 +47,9 @@ body {
 .App-link {
   color: #61dafb;
 }
+.header-admin{
 
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
